js/src/tests/test262/language/expressions/dynamic-import/syntax/invalid/nested-do-while-typeof-import-call-source-property.js
DONOTEVALUATE
(
)
;
do
{
typeof
import
.
source
.
UNKNOWN
;
}
while
(
false
)
;
